tests/Rules/Structure/Fixtures/valid/accesskey_unique.html.twig
<nav>
  <a href="/home" accesskey="h">Home</a>
  <a href="/about" accesskey="a">About</a>
</nav>
