tests/Rules/Structure/Fixtures/invalid/accesskey_duplicate.html.twig
{# 1 errors #}
<nav>
  <a href="/home" accesskey="h">Home</a>
  <a href="/contact" accesskey="h">Contact</a>
</nav>
